fix(overflow-x, translation): overflow-x 수정 확인. ios에 브랜드에서 전화번호로 인식되는 이슈는 번역으로 처리.

--- a/themes/classting/source/css/style.styl
+++ b/themes/classting/source/css/style.styl
@@ -2,7 +2,7 @@
 @import "_extend"
 
 html, body
-  overflow-x: hidden
+  overflow-x: hidden !important
 
 body
   padding-top: 60px
